Increase size of canvas and fix wrapping bullets bug.

--- a/css/app.css
+++ b/css/app.css
@@ -20,7 +20,7 @@ section {
 
   border: 1px solid #ccccc8;
   height: 500px;
-  width: 500px;
+  width: 1000px;
 }
 
 canvas {
